--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
           <li><a href="http://lono.cloud">Lono</a></li>
           <li><a href="http://rubyonjets.com">Jets</a></li>
           <li><a href="http://lono.cloud">Lono</a></li>
-          <li><a href="http://ufoships.com">Ufo</a></li>
+          <li><a href="http://ufoships.com">UFO</a></li>
           <li><a href="http://sonic-screwdriver.cloud">Sonic</a></li>
           <li><a href="http://jack-eb.com">Jack</a></li>
         </ul>
