--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -55,7 +55,29 @@
         <ul>
         {% assign docs = site.docs | where: "categories","config" | sort: "order" %}
         {% for doc in docs -%}
+          {% if doc.url == "/docs/config/hooks/" %}
+          <li><a href="{% link _docs/config/hooks.md %}">Hooks</a>
+            <ul>
+            {% assign docs = site.docs | where: "categories","hooks" | sort: "order" %}
+            {% for doc in docs -%}
+            {% if doc.url == "/docs/config/hooks/ufo/" %}
+              <li><a href="{% link _docs/config/hooks/ufo.md %}">Ufo</a>
+                <ul>
+                {% assign docs = site.docs | where: "categories","hooks-ufo" | sort: "order" %}
+                {% for doc in docs -%}
+                  <li><a href="{{ doc.url }}">{% if doc.nav_text %}{{ doc.nav_text }}{% else %}{{ doc.title }}{% endif %}</a></li>
+                {% endfor %}
+                </ul>
+              </li>
+            {% else %}
+              <li><a href='{{doc.url}}'>{% if doc.nav_text %}{{ doc.nav_text }}{% else %}{{ doc.title }}{% endif %}</a></li>
+            {% endif %}
+            {% endfor %}
+            </ul>
+          </li>
+          {% else %}
           <li><a href='{{doc.url}}'>{% if doc.nav_text %}{{ doc.nav_text }}{% else %}{{ doc.title }}{% endif %}</a></li>
+          {% endif %}
         {% endfor %}
         </ul>
       </li>
