--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,10 @@
       <div class="footer-col col-md-4">
         <h3>More Tools</h3>
         <ul class="list-unstyled tools">
-          <li><a href="http://lono.cloud">Lono</a></li>
-          <li><a href="http://rubyonjets.com">Jets</a></li>
-          <li><a href="http://lono.cloud">Lono</a></li>
-          <li><a href="http://ufoships.com">UFO</a></li>
-          <li><a href="http://sonic-screwdriver.cloud">Sonic</a></li>
-          <li><a href="http://jack-eb.com">Jack</a></li>
+          <li><a href="https://terraspace.cloud">Terraspace</a></li>
+          <li><a href="https://rubyonjets.com">Jets</a></li>
+          <li><a href="https://ufoships.com">UFO</a></li>
+          <li><a href="https://lono.cloud">Lono</a></li>
         </ul>
       </div>
       <div class="footer-col col-md-4">
