--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
       <div class="footer-col col-md-4">
         <h3>More Tools</h3>
         <ul class="list-unstyled tools">
+          <li><a href="https://blossom-cloud.com">Blossom</a></li>
           <li><a href="https://terraspace.cloud">Terraspace</a></li>
           <li><a href="https://rubyonjets.com">Jets</a></li>
           <li><a href="https://ufoships.com">UFO</a></li>
